--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
 #    host: 127.0.0.1
 #    port: 6379
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
   h2:
     console:
